fix for image width on mobile

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -317,6 +317,7 @@ figure {
 img,
 svg {
   vertical-align: middle;
+  max-width: 80vw;
 }
 
 table {
